# OTUS-C-2023-07

./: CMakeLists.txt  README.md  ~$п инфа по clang.docx  Презентация_16_9_Защита проектной работы_синяя.pptx  Речь для защиты.docx
output_graphviz/: call_graph.dot
src/: clang_graphviz.c
tests/test1/: ast_dump_example_1.txt  example_1  example_1.c  example_1.c.245r.expand
tests/test2/: ast_dump_example_2.txt
